--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+ <div class="row">
+  <div class="col-sm-10 mt-3">
  <% if @address.errors.any? %>
   <%= @address.errors.count %>件のエラーが発生しました
   <ul>
@@ -6,7 +9,7 @@
     <% end %>
   </ul>
 <% end %>
- <h3>配送先編集</h3>
+ <h3><span class="bg-light">配送先編集</span></h3>
   <%= form_with model: @address do |f| %>
     <h4>郵便番号</h4>
       <%= f.text_field :postcode %>
@@ -14,5 +17,8 @@
       <%= f.text_field :address %>
     <h4>宛名</h4>
       <%= f.text_field :name %>
-    <%= f.submit '編集内容を保存', class: "btn btn-success" %>
+    <%= f.submit '編集内容を保存', class: "btn btn-success ml-3" %>
   <% end %>
+  </div>
+ </div>
+</div> 
