--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,24 +1,61 @@
-<h3>配送先登録/一覧</h3>
-  </div>
+<div class="container">
+ <div class="row">
+  <div class="col-sm-10 mt-3 mx-auto">
+ <h3><span class="bg-light">配送先登録/一覧</span></h3>
     <%= form_with model: @address do |f| %>
+    <table class="table table-borderless">
+     <tbody>
+      <tr>
       <div class="field">
-        <%= f.label :"郵便番号(ハイフンなし)" %>
-        <%= f.text_field :postcode %>
+       <td style="width :30%"><%= f.label :"郵便番号(ハイフンなし)" %></td>
+       <td><%= f.text_field :postcode %></td>
       </div>
+      </tr>
+      <tr>
         <div class="field">
-          <%= f.label :"住所" %>
-          <%= f.text_field :address %>
+        <td><%= f.label :"住所" %></td>
+        <td><%= f.text_field :address %></td>
         </div>
+      </tr>
+      <tr>
       <div class="field">
-        <%= f.label :"宛名" %>
-        <%= f.text_field :name %>
+        <td><%= f.label :"宛名" %></td>
+        <td><%= f.text_field :name %></td>
       </div>
-        <%= f.submit '新規登録', class: "btn btn-success btn-xs"  %>
+      </tr>
+     </tbody>
+    </table>
+    <div class="text-center">
+     <%= f.submit '新規登録', class: "btn btn-success btn-xs"  %>
+    </div>
     <% end %>
-      <% @addresses.each do |address| %>
-        <span><%= address.postcode %></span>
-        <span><%= address.address %></span>
-        <span><%= address.name %></span>
-          <%= link_to "編集する", edit_address_path(address), class:  "btn btn-sm btn-success" %>
-          <%= link_to "削除する", address_path(address), class: "btn btn-sm btn-danger", method: :delete %>
-      <% end %>
+     <table class="table table-bordered">
+       <% @addresses.each do |address| %>
+      <thead class="table-secondary">
+       <tr>  
+        <td>郵便番号</td>
+        <td>住所</td>
+        <td>宛名</td>
+        <td></td>
+       </tr>
+      </thead>
+      <tbody>
+       <tr>
+        <td><%= address.postcode %></td>
+        <td><%= address.address %></td>
+        <td><%= address.name %></td>
+        <td><%= link_to "編集する", edit_address_path(address), class:  "btn btn-sm btn-success" %>
+            <%= link_to "削除する", address_path(address), class: "btn btn-sm btn-danger", method: :delete %>
+        </td>
+       </tr>
+      </tbody>
+       <% end %>
+     </table>
+      
+  </div>
+ </div>
+</div>    
+          
+     
+  
+ 
