--- a/app/views/public/end_users/edit.html.erb
+++ b/app/views/public/end_users/edit.html.erb
@@ -1,12 +1,10 @@
-<div class="row">
-  <div class="col-md-5">
-    <table class="table table-borderless">
-      <thead class="thead-light">
-          <tr>
-            <h3>会員情報編集</h3>
-          </tr>
-        </thead>
-        <%= form_with model: @end_user do |f| %>
+<div class="container">
+ <div class="row">
+  <div class="col-md-8 mt-3">
+   <h3><span class="bg-light">会員情報編集</span></h3>
+    <%= form_with model: @end_user do |f| %>
+     <table class="table table-borderless">
+     
         <tbody>
           <tr>
             <td>氏名</td>
@@ -32,15 +30,16 @@
             <td>メールアドレス</td>
             <td><%=  f.text_field :email %></td>
           </tr>
-          <tr>
-            <td><%= f.submit '保存', class: "btn btn-success" %></td>
-            <td><%= link_to "退会する", end_users_unsubcribe_path, class: "btn btn-danger" %></td>
-          </tr>
+        </tbody>
+    </table> 
+        <div class="text-center">
+          <%= f.submit '変更内容を保存', class: "btn btn-success mr-3" %>
+          <%= link_to "退会する", end_users_unsubcribe_path, class: "btn btn-danger" %>
+        </div>  
         <% end %>
-        </tbody>
-        <tbody>
-        </tbody>
-      </table>
+        
+       
+      
     </div>
   </div>
 </div>
