--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -1,53 +1,48 @@
-<div class="row">
-  <div class="col-md-5">
-    <table class="table table-borderless">
-      <thead class="thead-light">
-          <tr>
-            <h3>マイページ</h3>
-            <%= link_to "編集する", edit_end_user_path(@end_user.id), class: "btn btn-success" %>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-          </tr>
-          <tr>
-            <td>氏名</td>
-            <td><%= @end_user.last_name %><%= @end_user.first_name %></td>
-          </tr>
-          <tr>
-            <td>フリガナ</td>
-            <td><%= @end_user.last_name_kana %><%= @end_user.first_name_kana %></td>
-          </tr>
-          <tr>
-            <td>郵便番号</td>
-            <td><%= @end_user.postcode %></td>
-          </tr>
-          <tr>
-            <td>住所</td>
-            <td><%= @end_user.address %></td>
-          </tr>
-          <tr>
-            <td>電話番号</td>
-            <td><%= @end_user.phone_number %></td>
-          </tr>
-          <tr>
-            <td>メールアドレス</td>
-            <td><%= @end_user.email %></td>
-          </tr>
-          <tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <td>配送先</td>
-            <td><%= link_to "一覧を見る", addresses_path(@end_user.id), class: "btn btn-success" %></td>
-          <tr/>
-          <tr>
-            <td>注文履歴</td>
-            <td><%= link_to "一覧を見る", orders_path(@end_user.id), class: "btn btn-success" %></td>
-            
-          </tr>
+<div class="container">
+ <div class="row">
+  <div class="col-md-8 mt-3">
+   <h3><span class="bg-light">マイページ</span></h3>
+    <%= link_to "編集する", edit_end_user_path(@end_user.id), class: "btn btn-success" %> 
+     <table class="table table-bordered mt-2">
+      <tbody>
+       <tr>
+        <td class="table-secondary" style="width: 30%">氏名</td>
+        <td><%= @end_user.last_name %><%= @end_user.first_name %></td>
+       </tr>
+        <tr>
+         <td class="table-secondary">フリガナ</td>
+         <td><%= @end_user.last_name_kana %><%= @end_user.first_name_kana %></td>
+        </tr>
+        <tr>
+         <td class="table-secondary">郵便番号</td>
+         <td><%= @end_user.postcode %></td>
+        </tr>
+        <tr>
+         <td class="table-secondary">住所</td>
+         <td><%= @end_user.address %></td>
+        </tr>
+        <tr>
+         <td class="table-secondary">電話番号</td>
+         <td><%= @end_user.phone_number %></td>
+        </tr>
+        <tr>
+         <td class="table-secondary">メールアドレス</td>
+         <td><%= @end_user.email %></td>
+        </tr>
+       </tbody>
+      </table>
+      <table class="table table-borderless">
+       <tbody>
+        <tr>
+         <td>配送先</td>
+         <td><%= link_to "一覧を見る", addresses_path(@end_user.id), class: "btn btn-primary" %></td>
+        <tr/>
+        <tr>
+         <td>注文履歴</td>
+         <td><%= link_to "一覧を見る", orders_path(@end_user.id), class: "btn btn-primary" %></td>
+        </tr>
         </tbody>
       </table>
     </div>
   </div>
-</div>
+ </div>
