--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,95 +1,76 @@
-<div class="d-flex align-items-center justify-content-center">
-  <h3>注文履歴詳細</h3>
-</div>
 <div class="container">
-  <div class="row">
-    <div class="col-md-15">
-      <table class="table table-borderless">
-        <thead class="thead-light">
-          <tr>
-            <th>注文情報</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>注文日</td>
-            <td><%= @order.created_at %></td>
-          </tr>
-          <tr>
-            <td>配送先</td>
-            <td>
-            〒<%= @order.postcode %>
+ <div class="row">
+  <div class="col-md-7 mt-3">
+   <h3 class="ml-3"><span class="bg-light">注文履歴詳細</span></h3>
+    <p><b>注文情報</b></p>
+     <table class="table table-bordered">
+      <tbody>
+       <tr>
+        <td class="table-secondary">注文日</td>
+        <td><%= @order.created_at %></td>
+       </tr>
+       <tr>
+        <td class="table-secondary">配送先</td>
+        <td>
+          〒<%= @order.postcode %>
             <%= @order.address%>
             <%= @order.name %>
-            </td>
-          </tr>
-          <tr>
-            <td>支払金額</td>
-            <td><%= @order.bill %></td>
-          </tr>
-          <tr>
-            <td>ステータス</td>
-            <td><%= @order.order_status_i18n %></td>
-          </tr>
-        </tbody>
-        <thead>
-          <tr>
-            <th>注文内容</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>商品名</td>
-            <% @order.order_details.each do |o| %>
-            <td><%= o.product.name %></td>
-            <% end %>
-          </tr>
-          <tr>
-            <td>単価(税込)</td>
-            <% @order.order_details.each do |o| %>
-            <td><%= o.product.add_tax_price %></td>
-            <% end %>
-          </tr>
-          <tr>
-            <td>数量</td>
-            <% @order.order_details.each do |o| %>
-            <td><%= o.quantity %></td>
-            <% end %>
-          </tr>
-          <tr>
-            <td>小計</td>
-            <% @order.order_details.each do |o| %>
-            <td><%= o.subtotal %></td>
-            <% end %>
-          </tr>
-        </tbody>
-        <thead>
-          <tr><th>請求情報</th></tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>商品合計</td>
-            <td><%= @total %></td>
-          </tr>
-          <tr>
-            <td>配送料</td>
-            <td><%= @order.shipping_fee %></td>
-          </tr>
-          <tr>
-            <td>ご請求額</td>
-            <td><%= @total + @order.shipping_fee %></td>
-          </tr>
-        </tbody>
-        <thead><tr><th>支払方法</th></tr></thead>
-        <tbody><tr><td><%= @order.payment_method_i18n %></td></tr></tbody>
-        <thead><tr><th>お届け先</th></tr></thead>
-        <tbody>
-          <tr>
-            <td>〒<%= @order.postcode %><%= @order.address %></td>
-            <td><%= @order.name %></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+        </td>
+       </tr>
+       <tr>
+        <td class="table-secondary">支払方法</td>
+        <td><%= @order.payment_method_i18n %></td>
+       </tr>
+       <tr>
+        <td class="table-secondary">ステータス</td>
+        <td><%= @order.order_status_i18n %></td>
+       </tr>
+     </table>
+   </div>
+  <div class="col-md-4 mt-5">
+   <p><b>請求情報</b></p>
+     <table class="table table-bordered">
+       <tbody>
+        <tr>
+         <td class="table-secondary">商品合計</td>
+         <td><%= @total %></td>
+        </tr>
+        <tr>
+          <td class="table-secondary">配送料</td>
+          <td><%= @order.shipping_fee %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">ご請求額</th>
+          <td><%= @total + @order.shipping_fee %></td>
+        </tr>
+       </tbody>
+     </table>
   </div>
+ </div>
+ <div class="row">
+  <div class="col-md-9 mt-2">
+   <p><b>注文内容</b></p>
+   <table class="table table-bordered">
+    <thead>
+    <tr>
+     <td class="table-secondary">商品名</th>
+     <td class="table-secondary">単価(税込)</th>
+     <td class="table-secondary">数量</th>
+     <td class="table-secondary">小計</td>
+    </tr>
+    </thead>
+  <% @order.order_details.each do |o| %>
+   <tbody>
+    <tr>
+      <td><%= o.product.name %></td>
+      <td><%= o.product.add_tax_price %></td>
+      <td><%= o.quantity %></td>
+      <td><%= o.subtotal %></td>
+    </tr>
+   </tbody>
+  <% end %>
+    </table>
+  </div>
+ </div> 
 </div>
+  
