--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,14 +1,13 @@
 <div class="container">
  <div class="row">
-  <div class="col-sm-10 mx-auto">
-   <div class="text-center">
+  <div class="col-sm-10 mt-3 mx-auto">
     <div class="main-image">
-    <div class="bg-light bg-opacity-10">
-    <p>ようこそ、ながのCAKEへ！<br>
+     <div class="top-text text-right">
+     <h5><strong>ようこそ、ながのCAKEへ！</strong><br>
         このサイトはケーキ販売のECサイトになります。<br>
-    　　会員でない方も商品の閲覧はできますが、<br>
-    　　購入には会員登録が必要になります。</p>
-    </div>
+    会員でない方も商品の閲覧はできますが、<br>
+    購入には会員登録が必要になります。</h4>
+     </div>
     </div>
     <div class="text-left mt-5">
     <h3>新着商品</h3>
@@ -22,21 +21,21 @@
     <% end %>
     </div>
     </div>
-   </div>
+   
     <div class="text-right">
     <%= link_to products_path do %>
     すべての商品を見る>>
     <% end %>
- </div>
+    </div>
   </div>
  </div>
 </div> 
 
 <style>
  .main-image{
- background-image: url("<%= asset_path('case.jpg') %>");
- height: 400px;
- background-position: center;
+ background-image: url("<%= asset_path('main_image.jpg') %>");
+ height: 350px;
+ background-position: top;
  background-size: cover;
  }
 </style>
