--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
  <div class="row">
-  <div class="col-sm-10 mx-auto">
+  <div class="col-sm-10 mt-3 mx-auto">
 <h2>商品一覧(全<%= @total_products.count %>件)</h2>
  
 <% @products.each do |product| %>
